# ChangeLog for games-emulation/SSNES
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Sep 2011; Michał Ziąbkowski <mziab@o2.pl> SSNES-0.8.2.ebuild,
  SSNES-9999.ebuild:
  libsnes dep can now be satisfied by C++98 fork, which is now also used as the
  default due to not being tied down to recent GCC versions.

*SSNES-0.8.2 (27 Sep 2011)

  27 Sep 2011; Michał Ziąbkowski <mziab@o2.pl> +SSNES-0.8.2.ebuild:
  Added regular snapshot.

  27 Sep 2011; Michał Ziąbkowski <mziab@o2.pl> SSNES-9999.ebuild:
  Oops, forgot to add xvideo in src_configure.

  26 Sep 2011; Michał Ziąbkowski <mziab@o2.pl> SSNES-9999.ebuild,
  metadata.xml:
  Added sdl-image flag.

  24 Sep 2011; Michał Ziąbkowski <mziab@o2.pl> SSNES-9999.ebuild:
  Fixed deps with USE=dynamic. A libsnes implementation is always required at
  runtime, but not necessarily at build time.

  23 Sep 2011; Michał Ziąbkowski <mziab@o2.pl> SSNES-9999.ebuild:
  Added xv flag.

  22 Aug 2011; Michał Ziąbkowski <mziab@o2.pl> SSNES-9999.ebuild,
  files/SSNES-build.patch, metadata.xml:
  Updated patch. Migrated to git-2.eclass.

  31 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> SSNES-9999.ebuild:
  Updated ffmpeg dep.

  31 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> files/SSNES-build.patch:
  Updated Makefile patch.

  27 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> SSNES-9999.ebuild:
  Removed EAPI=4 features for now.

  05 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> SSNES-9999.ebuild,
  -files/SSNES-cflags.patch:
  Dropped obsolete patch.

  10 Feb 2011; Michał Ziąbkowski <mziab@o2.pl> SSNES-9999.ebuild:
  Made libsnes dep optional when using USE=dynamic.

  10 Feb 2011; Michał Ziąbkowski <mziab@o2.pl> SSNES-9999.ebuild,
  metadata.xml:
  Added pulseaudio to REQUIRED_USE. Added dynamic flag.

  09 Feb 2011; Michał Ziąbkowski <mziab@o2.pl> SSNES-9999.ebuild,
  files/SSNES-build.patch:
  Updated build patch and added option to use snes9x-libsnes.
