@@ -1,5 +1,5 @@
 AUX SSNES-build.patch 1172 RMD160 13eca6dddab96bee92ef1b49045e8d5efd97b64b SHA1 ddea46400470d4fa6c66de6693039491bd6c6082 SHA256 d323fda9d3c845ab2e4bc501cbcb8f3accd882e188f32f51223b72636ec2e283
-EBUILD SSNES-0.8.2.ebuild 1802 RMD160 216912b0eee2f1e177191ed2451207c0cd5e12f0 SHA1 a6f49266763a3d1665aecc4eac16815224fb4d30 SHA256 7890399741f862b290b7e2c1c3b55384384e36983fc0bdf068b30d8bf65e1f50
-EBUILD SSNES-9999.ebuild 1770 RMD160 a54d2c25f11236585b7642db01c6d30466092167 SHA1 20afc0d5f339c5864172af47b066f1849793cb4f SHA256 ffa15d895adf59e85cecf3a69b7d27a218b53f0b41146d4b237a72ceb3e7f1d7
-MISC ChangeLog 3242 RMD160 803e6eda96cff3d2453c509bea8bace964db8531 SHA1 a4c4cc55315360e64ca6fba5cf1f7652518cef69 SHA256 36b7398053103ef8d35344917284ffc9b123498ecd9cc253ba0ef263dd30b29f
+EBUILD SSNES-0.8.2.ebuild 1682 RMD160 83e98b8258bd68765c91ff2faf61f358719380ba SHA1 fc685560d10190b87efc1e3ecf1a87cdd39c2bb7 SHA256 562aec5ccbd4a75b7e0c9ffb54f8e54706886ba89a988bd216aa9256811c1988
+EBUILD SSNES-9999.ebuild 1650 RMD160 467f440a519ecad279c8b3262e05a6cf4cfadc04 SHA1 715c7d9bee5d4414f3c23b5e4d32c5e2065f9e16 SHA256 77340a0f111b39d89117ecbf957bab0b17ff4fb443b54ed6f9423f2fc4e9d5d9
+MISC ChangeLog 3369 RMD160 42a16688e5069ea619437ca9cdc5299a9b41ef24 SHA1 2711afd9263241cd3c251b99524e56486ed08ea6 SHA256 f3eabe6fc5f8f1e582980f73fc1c58c7254b99433a06002b773d7d89571d8f9b
 MISC metadata.xml 594 RMD160 3cb56525b2c55a6bd89935005f46b2bab4b00c96 SHA1 d54b92f83896be2c7cd273e46a86c9d8f77fa2b9 SHA256 cf936aae7605c32727c5758543c0fca1336981d28d9f25a5d4f86637982417f7
